# prepbuddy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: section_mapping.example.json
data/: section_mapping.json
docs/: adaptation.md  api.md  schema.md  section_mapping.md  technical_report.tex
docs/mappings/: document_2.md  document_3.md
outputs/scenario_b_iter1/: kb_snapshot_iter1.json  questions_iter1.json
outputs/scenario_b_iter2/: kb_snapshot_iter2.json  questions_iter2.json
outputs/scenario_b_iter3/: kb_snapshot_iter3.json  questions_iter3.json
src/prepbuddy/: __init__.py  api.py  cli.py  config_file.py  db.py  ingestion.py  logging_utils.py  mapping.py  path_utils.py  providers.py  repository.py  schemas.py  service.py  settings.py  ui.py  ui_helpers.py
tests/: test_api.py  test_cli_management.py  test_docker_config.py  test_document_library.py  test_ingestion_mapping.py  test_path_and_config.py  test_providers.py  test_service_scenario.py  test_ui_formatting.py  test_ui_launch.py
