[project]
name = "prepbuddy"
version = "0.1.0"
description = "Adaptive document preparation system for PDF-grounded MCQ sessions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0,<1.0.0",
  "typer>=0.12.0,<1.0.0",
  "rich>=13.7.0,<15.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "pymupdf>=1.24.0,<2.0.0",
  "google-genai>=1.0.0,<2.0.0",
  "ollama>=0.5.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "streamlit>=1.38.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<10.0.0",
  "pytest-cov>=5.0.0,<8.0.0",
  "ruff>=0.7.0,<1.0.0",
]
ui = ["streamlit>=1.38.0,<2.0.0"]

[project.scripts]
prepbuddy = "prepbuddy.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prepbuddy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

